content/css/styles.css
html, body { height: 100%; }

hgroup, .content > section, aside, header, header section, section.ImageReel img {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

blockquote { font-style: italic; border-left: 5px solid #eee; }

aside, header { background-color: rgba(255, 255, 255, 1.0);}

body { background-color: rgb(245, 245, 245); margin: 0;}
body { background-image: url('/content/images/stardust.png'); }

pre code { word-wrap: normal; overflow: scroll; display: block; border: 2px solid #CFCFCF;}

a:link { color:#339;}   
a:hover { color:#333;}  

.wrapper { min-height: 100%; }

header { margin: 0 auto .2em; height: 90px; background-color: rgba(255, 255, 255, 1.0);}
header nav { max-width: 1366px; margin: 0 auto; padding: 10px; }
header nav h3 { float: left; margin-top: 10px;}
header nav h3 a { text-decoration: none; }
header nav h3 a:visited { color: black; }
header nav small { display: block; }
header nav img.logo { float: left; border-radius: 37px; border: 1px solid #999; margin-right: 15px; opacity: 0.4; height: 64px; width: 64px; }
header nav img.feedicon { width: 24px; height: 24px; margin-top: 17px; margin-left: 10px; }

.content { max-width: 1366px; margin: 0 auto; }

.content > section { float: left; width: 75%; padding-right: 5px; margin-bottom: 5px; }
.content > section h2 { margin-bottom: 0.425em; border }
.content > section article { background-color: rgba(255, 255, 255, 1.0); padding: 20px; border-top: none;}
.content > section small { display: block; margin-top: 5px; font-size: 14px; font-style: italic; }
.content > section .Disqus { background-color: rgba(255, 255, 255, 1.0); padding: 20px; margin-top: 5px; }
.content > section .mailinglist { background-color: rgba(255, 255, 255, 1.0); padding: 20px; margin-top: 5px;}

.content aside { float: left; width: 25%; margin-bottom: 5px; }
.content aside a { text-decoration: none; font-size: 0.85rem }
.content aside small { display: block; }
.content aside section { padding: 20px; }
.content aside section .feedicon { width: 16px; height: 16px; margin-left: 2px; }
.content aside div { padding: 5px 0; }
.content aside h5 { margin-bottom: 2px; }

.content .metadata { background-color: rgba(255, 255, 255, 1.0); padding: 20px; border-bottom: none; }
.content .metadata h4 { display: inline; }

.content .share { background-color: rgba(255, 255, 255, 1.0); padding: 5px; text-align: center; }
.content .ShareIcons a { text-decoration: none; padding: 5px; }
.content .ShareIcons i { margin-left: 2px; font-size: 1.2rem; }

[contenteditable]:active, [contenteditable]:focus { border: none; outline: none; }

.selected { background-color: #eee; }

footer { text-align: center; width: 100%; background-color: rgba(255, 255, 255, 1.0); height: 40px; margin-top: -60px; clear: both; padding-top: 3px; }
footer a { text-decoration: none; padding: 0 2px; }
footer p { margin-bottom: 2px; display: inline; }
footer img { width: 18px; height: 18px; }

article.About span { display: block; margin-bottom: 15px; }
article.About h5 { border-bottom: 1px solid #bbb; padding-bottom: 5px; }

section.GameTitleLeft { clear: both; padding-top: 20px; }
section.GameTitleLeft:first-child { padding-top: 0; }
section.GameTitleLeft > div img { width: 312px; float: right; margin-left: 30px; }
section.GameTitleLeft span { display: block; margin-bottom: 10px; }
section.GameTitleLeft > div { min-height: 250px; padding: 10px; border: 1px solid #bbb;}

section.GameTitleRight { clear: both; padding-top: 20px; }
section.GameTitleRight > div img { width: 312px; float: left; margin-right: 30px;}
section.GameTitleRight span { display: block; margin-bottom: 10px; }
section.GameTitleRight > div { min-height: 250px; border: 1px solid #bbb; padding: 10px; }

section.ImageReel { clear:both; margin-top: 10px; min-height: 290px; }
section.ImageReel img { width: 33.3%; min-width: 212px; height: 256px; float: left; border: 1px solid #999; }

@media(max-width: 768px) {
	.content aside { width: 100%; }
	.content > section { width: 100%; padding-right: 0; }
}

@media(max-width: 568px) {
	footer { height: 70px; margin-top: -90px; }
	footer p { display: block; }
}

@media(max-width: 480px) {
	section.GameTitleLeft > div img { width: 100%; }
	section.GameTitleRight > div img { width: 100%; }
	section.GameTitleLeft > div h6 { clear: both; padding-top: 10px; }
	section.GameTitleRight > div h6 { clear: both; padding-top: 10px; }
	section.ImageReel img { width: 100%; }
	section.ImageReel { min-height: 700px; }
}

.itchio-play {
	font-family: Lato, sans-serif;
	display: inline-block;
	background: #FA5C5C;
	color: white;
	text-decoration: none;
	padding: 0 10px;
	font-size: 14px;
	text-shadow: 1px 1px 2px #b70606;
	border-radius: 1px;
	cursor: pointer;
	border: 0;
	line-height: 35px;
	height: 35px;
	border: 0;
}

